Resolve "unsupported JavaFX configuration" warning